# bareos-truenas-dash

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STATUS.md  app.py  bareos_client.py  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: build-push.yml
docs/: truenas-bridge-runbook.md
docs/superpowers/specs/: 2026-07-22-bareos-truenas-dash-design.md
static/: app.js  style.css
templates/: index.html
tests/: test_api.py  test_client_validation.py
